tests/parser/syntax-errors/token-not-found/expected_newline_before_block.choc
# RUN: choco-opt "%s" | filecheck "%s" --strict-whitespace

def foo():
    if True: pass

# CHECK:      SyntaxError (line 4, column 14): token of kind TokenKind.NEWLINE not found.
# CHECK-NEXT: >>>    if True: pass
# CHECK-NEXT: >>>-------------^
